2013-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-inactive): Add underline property.
	(w3m-form-input-textarea): Don't use it to view read-only textarea.

2013-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make disabled or read-only forms inatcive.

	* w3m-form.el (w3m-form-parse-and-fontify): Make `select', `checkbox',
	`radio', and `file' input forms inactive.
	(w3m-form-input-checkbox, w3m-form-input-radio, w3m-form-input-file)
	(w3m-form-input-select): Don't allow keys if it is inactive.

2013-10-08  Thorsten Jolitz  <tjolitz@gmail.com>

	* w3m-form.el (w3m-form-input-textarea-mode-setup): New option for
	setting up the textarea input buffer in org-mode instead of text-mode.

	(w3m-form-input-textarea-org-mode-map) New minor-mode-map.
	(w3m-form-textarea-use-org-mode-p) New variable.
	(w3m-form-textarea-toggle-major-mode) New function.
	(w3m-form-input-textarea-mode-setup) Setup textarea edit buffer with
	major-mode 'org-mode if `w3m-form-textarea-use-org-mode-p' is non-nil.
	(w3m-form-input-textarea) Split window sensibly if
	`w3m-form-textarea-use-org-mode-p' is non-nil.
	(w3m-form-input-textarea-mode) Override default minor-mode map with
	new minor-mode-map in case major-mode is 'org-mode.

2013-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-input-textarea-mode-setup):
	Fix typo (unquoted `view-mode').

2013-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-input-textarea-mode-setup): Use view-mode to
	show disabled or readonly textarea.
	(w3m-form-input-textarea): Revert last change; use w3m-form-inactive
	face to show disabled or readonly textarea.

2013-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make disabled forms not editable.  [emacs-w3m:12146]

	* w3m.el (w3m-use-filter): Default to t.
	(w3m-show-form-hint): Notice form is inactive.

	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly): New function
	that substitutes the `disabled' attribute with the `readonly' attribute