@@ -1,3 +1,8 @@
+2013-10-16  Michael Heerdegen  <michael_heerdegen@web.de>
+
+	* w3m-ems.el (w3m-tab-line):
+	Run w3m-force-window-update unconditionally.  [emacs-w3m:12175]
+
 2013-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-form.el (w3m-form-inactive): Add underline property.
